--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="row">
         <item name="android:layout_weight">1</item>
         <item name="android:layout_width">match_parent</item>
@@ -15,19 +16,18 @@
         <item name="android:textSize">40sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:onClick">boardTapped</item>
-        <item name="android:text">O</item>
     </style>
 
     <style name="verticalLine">
-        <item name="android:layout_width">5dp</item>
-        <item name="android:layout_height">match_parent</item>\
         <item name="android:background">@color/black</item>
+        <item name="android:layout_width">5dp</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="horizontalLine">
+        <item name="android:background">@color/black</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">5dp</item>
-        <item name="android:background">@color/black</item>
     </style>
 
 </resources>
