--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,8 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Turn X"
-        android:textSize="40sp"
         android:textColor="@color/black"
+        android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,107 +21,88 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:padding="20dp"
-        android:orientation="vertical"
         app:layout_constraintDimensionRatio="1:1"
+        android:orientation="vertical"
+        android:padding="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
+
 
         <LinearLayout
             style="@style/row">
 
             <Button
                 android:id="@+id/a1"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
             <View
-                style="@style/verticalLine">
-            </View>
+                style="@style/verticalLine"/>
 
             <Button
                 android:id="@+id/a2"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
             <View
-                style="@style/verticalLine">
-            </View>
+                style="@style/verticalLine"/>
 
             <Button
                 android:id="@+id/a3"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
         </LinearLayout>
 
         <View
-            style="@style/horizontalLine">
-        </View>
+            style="@style/horizontalLine"/>
 
         <LinearLayout
             style="@style/row">
 
             <Button
                 android:id="@+id/b1"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
             <View
-                style="@style/verticalLine">
-            </View>
+                style="@style/verticalLine"/>
 
             <Button
                 android:id="@+id/b2"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
             <View
-                style="@style/verticalLine">
-            </View>
+                style="@style/verticalLine"/>
 
             <Button
                 android:id="@+id/b3"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
         </LinearLayout>
 
         <View
-            style="@style/horizontalLine">
-        </View>
+            style="@style/horizontalLine"/>
 
         <LinearLayout
             style="@style/row">
 
             <Button
                 android:id="@+id/c1"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
             <View
-                style="@style/verticalLine">
-            </View>
+                style="@style/verticalLine"/>
 
             <Button
                 android:id="@+id/c2"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
             <View
-                style="@style/verticalLine">
-            </View>
+                style="@style/verticalLine"/>
 
             <Button
                 android:id="@+id/c3"
-                style="@style/column">
-            </Button>
+                style="@style/column" />
 
         </LinearLayout>
-
-
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
